--- a/package.json
+++ b/package.json
@@ -7,22 +7,23 @@
   "repository": "https://github.com/jschr/electron-react-redux-boilerplate",
   "license": "MIT",
   "dependencies": {
-    "react": "^0.14.0-rc1",
-    "react-dom": "^0.14.0-rc1",
-    "react-redux": "^2.1.2",
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2",
+    "react-redux": "^4.0.0",
     "redux": "^3.0.0",
     "redux-actions": "^0.8.0",
-    "electron-compile": "^0.9.2",
+    "electron-compile": "^1.0.0",
     "redux-devtools": "^2.1.2"
   },
   "devDependencies": {
     "babel": "^5.8.23",
     "babel-eslint": "^4.1.1",
     "browser-sync": "^2.9.3",
+    "electron-compilers": "^1.0.1",
     "electron-packager": "^5.1.0",
-    "electron-prebuilt": "^0.32.2",
+    "electron-prebuilt": "^0.34.2",
     "eslint": "^1.4.1",
-    "eslint-config-airbnb": "0.0.8",
+    "eslint-config-airbnb": "0.1.0",
     "eslint-plugin-react": "^3.3.2"
   },
   "scripts": {
