--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "redux-devtools": "^2.1.2"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
+    "babel-cli": "^6.2.0",
+    "babel-core": "^6.2.1",
     "babel-eslint": "^4.1.1",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
     "browser-sync": "^2.9.3",
     "electron-compilers": "^1.0.1",
     "electron-packager": "^5.1.0",
