--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
     "browser-sync": "^2.9.3",
+    "chai": "^3.4.1",
     "electron-compilers": "^1.0.1",
     "electron-packager": "^5.1.0",
     "electron-prebuilt": "^0.34.2",
     "eslint": "^1.4.1",
     "eslint-config-airbnb": "0.1.0",
-    "eslint-plugin-react": "^3.3.2"
+    "eslint-plugin-react": "^3.3.2",
+    "mocha": "^2.3.4"
   },
   "scripts": {
     "serve": "babel-node scripts/serve.js",
-    "pack": "babel-node scripts/pack.js"
+    "pack": "babel-node scripts/pack.js",
+    "test": "mocha -R spec --compilers js:babel-core/register"
   }
 }
