--- a/package.json
+++ b/package.json
@@ -1,39 +1,35 @@
 {
   "name": "electron-react-redux-boilerplate",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "electron-react-redux-boilerplate",
-  "main": "init.js",
+  "main": "app/init.js",
   "author": "Jordan Schroter",
   "repository": "https://github.com/jschr/electron-react-redux-boilerplate",
   "license": "MIT",
-  "dependencies": {
-    "react": "^0.14.2",
-    "react-dom": "^0.14.2",
-    "react-redux": "^4.0.0",
-    "redux": "^3.0.0",
-    "redux-actions": "^0.8.0",
-    "electron-compile": "^1.0.0",
-    "redux-devtools": "^2.1.2"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.2.0",
-    "babel-core": "^6.2.1",
-    "babel-eslint": "^4.1.1",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-stage-0": "^6.1.18",
-    "browser-sync": "^2.9.3",
-    "chai": "^3.4.1",
-    "electron-compilers": "^1.0.1",
-    "electron-packager": "^5.1.0",
-    "electron-prebuilt": "^0.34.2",
-    "eslint": "^1.4.1",
-    "eslint-config-airbnb": "0.1.0",
-    "eslint-plugin-react": "^3.3.2",
-    "mocha": "^2.3.4"
-  },
   "scripts": {
     "serve": "babel-node scripts/serve.js",
     "pack": "babel-node scripts/pack.js",
     "test": "mocha -R spec --compilers js:babel-core/register"
+  },
+  "build": {},
+  "devDependencies": {
+    "babel-cli": "^6.2.0",
+    "babel-core": "^6.2.1",
+    "babel-eslint": "^4.1.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.1.18",
+    "browser-sync": "^2.9.3",
+    "chai": "^3.4.1",
+    "electron-builder": "^5.26.0",
+    "electron-compile": "^3.3.5",
+    "electron-compilers": "^3.1.6",
+    "electron-packager": "^7.6.0",
+    "electron-prebuilt": "^1.3.3",
+    "eslint": "^1.4.1",
+    "eslint-config-airbnb": "0.1.0",
+    "eslint-plugin-react": "^3.3.2",
+    "mocha": "^2.3.4"
   }
 }
