--- a/package.json
+++ b/package.json
@@ -7,29 +7,33 @@
   "repository": "https://github.com/jschr/electron-react-redux-boilerplate",
   "license": "MIT",
   "dependencies": {
-    "react": "^0.14.2",
-    "react-dom": "^0.14.2",
-    "react-redux": "^4.0.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
     "redux": "^3.0.0",
-    "redux-actions": "^0.8.0",
-    "electron-compile": "^1.0.0",
-    "redux-devtools": "^2.1.2"
+    "redux-actions": "^1.2.1",
+    "electron-compile": "^5.1.3",
+    "redux-devtools": "^3.3.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.2.0",
+    "babel-cli": "^6.22.2",
     "babel-core": "^6.2.1",
-    "babel-eslint": "^4.1.1",
+    "babel-eslint": "^7.1.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.1.18",
     "browser-sync": "^2.9.3",
     "chai": "^3.4.1",
-    "electron-compilers": "^1.0.1",
-    "electron-packager": "^5.1.0",
-    "electron-prebuilt": "^0.34.2",
-    "eslint": "^1.4.1",
-    "eslint-config-airbnb": "0.1.0",
-    "eslint-plugin-react": "^3.3.2",
-    "mocha": "^2.3.4"
+    "electron": "^1.5.0",
+    "electron-compilers": "^5.1.3",
+    "electron-packager": "^8.5.1",
+    "eslint": "^3.14.1",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-plugin-react": "^6.9.0",
+    "mocha": "^3.2.0",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.2.0"
   },
   "scripts": {
     "serve": "babel-node scripts/serve.js",
