--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
   "repository": "https://github.com/jschr/electron-react-redux-boilerplate",
   "license": "MIT",
   "dependencies": {
+    "electron-compile": "^5.1.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "redux": "^3.0.0",
-    "redux-actions": "^1.2.1",
-    "electron-compile": "^5.1.3",
-    "redux-devtools": "^3.3.2"
+    "redux-actions": "^1.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-core": "^6.2.1",
     "babel-eslint": "^7.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.1.18",
@@ -27,6 +27,7 @@
     "chai": "^3.4.1",
     "electron": "^1.5.0",
     "electron-compilers": "^5.1.3",
+    "electron-devtools-installer": "^2.1.0",
     "electron-packager": "^8.5.1",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
