Enable inline source maps

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,6 @@
 {
   "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["transform-decorators-legacy", "transform-runtime"]
+  "plugins": ["transform-decorators-legacy", "transform-runtime"],
+  "sourceMaps": "inline",
+  "retainLines": true
 }
