--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "electron-devtools-installer": "^2.1.0",
     "electron-packager": "^8.5.1",
     "eslint": "^3.14.1",
-    "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-react": "^6.9.0",
     "mocha": "^3.2.0"
   },
   "scripts": {
     "serve": "babel-node scripts/serve.js",
     "pack": "babel-node scripts/pack.js",
-    "test": "mocha -R spec --compilers js:babel-core/register"
+    "test": "mocha -R spec --compilers js:babel-core/register",
+    "lint": "eslint --format=stylish app test *.js"
   }
 }
