--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,16 @@
 {
-  "extends": "eslint-config-airbnb",
+  "extends": [
+    "eslint:recommended", 
+    "plugin:react/recommended"
+  ],
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true,
+      "modules": true
+    }
+  },
+  "plugins": [ "react" ], 
   "rules": {
     "indent": [ 2, 2 ],
     "quotes": [ 2, "single" ],
