--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "redux": "^3.0.0",
-    "redux-actions": "^1.2.1"
+    "redux-actions": "^1.2.1",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
@@ -30,15 +31,13 @@
     "electron-devtools-installer": "^2.1.0",
     "electron-packager": "^8.5.1",
     "eslint": "^3.14.1",
-    "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-react": "^6.9.0",
-    "mocha": "^3.2.0",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.2.0"
+    "mocha": "^3.2.0"
   },
   "scripts": {
     "serve": "babel-node scripts/serve.js",
     "pack": "babel-node scripts/pack.js",
-    "test": "mocha -R spec --compilers js:babel-core/register"
+    "test": "mocha -R spec --compilers js:babel-core/register",
+    "lint": "eslint --no-ignore scripts app test *.js"
   }
 }
