--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.7",
     "redux": "^3.0.0",
     "redux-actions": "^1.2.1",
     "redux-thunk": "^2.2.0"
