--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-redux": "^4.0.7",
     "redux": "^3.0.0",
     "redux-actions": "^1.2.1",
+    "redux-localstorage": "^0.4.1",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
