--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,4 @@
 {
   "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["transform-decorators-legacy", "transform-runtime"],
-  "sourceMaps": "inline",
-  "retainLines": true
+  "plugins": ["transform-decorators-legacy", "transform-runtime"]
 }
