--- a/package.json
+++ b/package.json
@@ -43,20 +43,20 @@
   },
   "scripts": {
     "postinstall": "install-app-deps",
-    "serve": "babel app/ --copy-files --out-dir build --source-maps true && run-p -r private:watch private:serve",
-    "pack": "run-s private:clean private:compile build:all",
-    "pack:mac": "run-s private:clean private:compile build:mac",
-    "pack:win": "run-s private:clean private:compile build:win",
-    "pack:linux": "run-s private:clean private:compile build:linux",
-    "build:all": "build -mwl",
-    "build:mac": "build --mac",
-    "build:win": "build --win",
-    "build:linux": "build --linux",
-    "private:watch": "babel app/ --copy-files --out-dir build --source-maps true --watch --skip-initial-build",
+    "serve": "npm run private:compile -- --source-maps true && run-p -r private:watch private:serve",
+    "test": "mocha -R spec --compilers js:babel-core/register",
+    "lint": "eslint --no-ignore scripts app test *.js",
+    "pack": "run-s private:clean private:compile private:build:all",
+    "pack:mac": "run-s private:clean private:compile private:build:mac",
+    "pack:win": "run-s private:clean private:compile private:build:win",
+    "pack:linux": "run-s private:clean private:compile private:build:linux",
+    "private:build:all": "build -mwl",
+    "private:build:mac": "build --mac",
+    "private:build:win": "build --win",
+    "private:build:linux": "build --linux",
+    "private:watch": "npm run private:compile -- --source-maps true --watch --skip-initial-build",
     "private:serve": "babel-node scripts/serve.js",
     "private:compile": "babel app/ --copy-files --out-dir build",
-    "private:clean": "rimraf build",
-    "test": "mocha -R spec --compilers js:babel-core/register",
-    "lint": "eslint --no-ignore scripts app test *.js"
+    "private:clean": "rimraf build"
   }
 }
