--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "scripts": {
     "postinstall": "install-app-deps",
     "develop": "npm run private:compile -- --source-maps true && run-p -r private:watch private:serve",
-    "test": "mocha -R spec --compilers js:babel-core/register",
+    "test": "mocha -R spec --compilers js:babel-core/register test/**/*.spec.js",
     "lint": "eslint --no-ignore scripts app test *.js",
     "pack": "run-s private:clean private:compile private:build:all",
     "pack:mac": "run-s private:clean private:compile private:build:mac",
