--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": [
-    "eslint:recommended", 
-    "plugin:react/recommended"
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "prettier"
   ],
   "parser": "babel-eslint",
   "parserOptions": {
@@ -10,22 +11,17 @@
       "modules": true
     }
   },
-  "plugins": [ "react" ], 
+  "plugins": [ "react" ],
   "rules": {
-    "indent": [ 2, 2 ],
-    "quotes": [ 2, "single" ],
-    "linebreak-style": [ 2, "unix" ],
-    "semi": [ 2, "always" ],
-    "no-console": [ 0 ],
-    "no-loop-func": [ 0 ],
-    "new-cap": [ 0 ],
-    "no-trailing-spaces": [ 0 ],
-    "no-param-reassign": [ 0 ],
-    "func-names": [ 0 ],
-    "comma-dangle": [ 0 ],
-    "no-unused-expressions" : [ 0 ], // until fixed https://github.com/babel/babel-eslint/issues/158
-    "block-scoped-var": [ 0 ], // until fixed https://github.com/eslint/eslint/issues/2253
-    "react/prop-types": [ 0 ]
+    "prefer-const": "warn",
+    "no-console": "off",
+    "no-loop-func": "warn",
+    "new-cap": "off",
+    "no-param-reassign": "warn",
+    "func-names": "off",
+    "no-unused-expressions" : "error",
+    "block-scoped-var": "error",
+    "react/prop-types": "off"
   },
   "env": {
     "es6": true,
