--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "electron-devtools-installer": "^2.1.0",
     "electron-mocha": "^6.0.1",
     "eslint": "^4.3.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-react": "^7.1.0",
     "npm-run-all": "^4.0.1",
     "redux-mock-store": "^1.2.2",
