--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,16 @@
 {
-  "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["transform-decorators-legacy", "transform-runtime"]
+  "presets": [
+    ["env", {
+      "targets": {
+        "electron": "1.8"
+      },
+      "useBuiltIns": true
+    }], "react"
+  ],
+  "plugins": [
+    "transform-decorators-legacy",
+    "transform-class-properties",
+    "transform-object-rest-spread",
+    "transform-runtime"
+  ]
 }
