--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "repository": "https://github.com/jschr/electron-react-redux-boilerplate",
   "license": "MIT",
   "dependencies": {
-    "babel-runtime": "^6.22.0",
+    "babel-runtime": "^6.26.0",
     "history": "^4.6.3",
     "prop-types": "^15.5.10",
     "react": "^16.2.0",
@@ -27,18 +27,19 @@
     "babel-cli": "^6.22.2",
     "babel-core": "^6.2.1",
     "babel-eslint": "^8.2.6",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-0": "^6.1.18",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.23.6",
     "chai": "^4.1.0",
     "electron": "^1.8.4",
     "electron-builder": "^20.0.7",
     "electron-devtools-installer": "^2.1.0",
     "electron-mocha": "^6.0.1",
-    "eslint": "^4.3.0",
+    "eslint": "^5.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-react": "^7.1.0",
     "npm-run-all": "^4.0.1",
