--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "license": "MIT",
   "dependencies": {
     "@babel/register": "^7.0.0",
+    "connected-react-router": "^4.5.0",
     "history": "^4.6.3",
     "prop-types": "^15.5.10",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.2",
     "react-router": "^4.1.2",
-    "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^4.0.0",
     "redux-actions": "^2.2.1",
     "redux-localstorage": "^0.4.1",
