--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "@babel/register": "^7.0.0",
+    "@material-ui/core": "^4.2.0",
+    "@material-ui/icons": "^4.2.1",
     "connected-react-router": "^5.0.1",
     "history": "^4.6.3",
     "prop-types": "^15.5.10",
@@ -21,7 +23,8 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.2.1",
     "redux-localstorage": "^0.4.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
