--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
-    "@babel/cli": "7.1.2",
-    "@babel/core": "7.1.2",
-    "@babel/node": "7.0.0",
-    "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/plugin-proposal-decorators": "7.1.2",
-    "@babel/preset-env": "7.1.0",
+    "@babel/cli": "7.5.0",
+    "@babel/core": "7.5.4",
+    "@babel/node": "7.5.0",
+    "@babel/plugin-proposal-class-properties": "7.5.0",
+    "@babel/plugin-proposal-decorators": "7.4.4",
+    "@babel/preset-env": "7.5.4",
     "@babel/preset-react": "7.0.0",
     "babel-eslint": "10.0.1",
+    "babel-loader": "8.0.6",
     "browser-sync": "2.23.6",
     "chai": "4.1.0",
     "cross-env": "5.2.0",
@@ -72,7 +73,6 @@
     "private:serve": "babel-node scripts/serve.js",
     "private:compile": "babel app/ --copy-files --out-dir build",
     "private:clean": "rimraf build",
-
     "t::start": "webpack-dev-server --hot --host 0.0.0.0 --config=./webpack/webpack.dev.config.js --mode development"
   }
 }
