--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@babel/preset-react": "7.0.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.6",
-    "browser-sync": "2.23.6",
     "chai": "4.1.0",
     "cross-env": "5.2.0",
     "electron": "3.0.0",
@@ -47,6 +46,7 @@
     "eslint-config-prettier": "3.1.0",
     "eslint-plugin-react": "7.1.0",
     "html-webpack-plugin": "3.2.0",
+    "node-watch": "0.6.2",
     "npm-run-all": "4.0.1",
     "redux-mock-store": "1.2.2",
     "rimraf": "2.5.4",
