--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,6 @@ charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{js,json,css,html}]
+[*.{js,jsx,json,css,html}]
 indent_style = space
 indent_size = 2
