prod building with webpack; template and html-webpack-plugin instead of generating markup wih js

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -6,11 +6,11 @@ asar: true
 
 directories:
   buildResources: dist-assets/
-  output: dist/
+  output: build/
 
 files:
   - package.json
-  - build/
+  - pre-build/
   - node_modules/
 
 dmg:
