--- a/package.json
+++ b/package.json
@@ -54,14 +54,14 @@
     "rimraf": "2.5.4",
     "webpack": "4.35.3",
     "webpack-cli": "3.3.5",
-    "webpack-dev-server": "3.7.2"
+    "webpack-dev-server": "3.7.2",
+    "webpack-merge": "4.2.1"
   },
   "scripts": {
     "start": "node ./dev/dev.js",
     "postinstall": "electron-builder install-app-deps",
     "lint": "eslint --no-ignore src *.js",
     "format": "npm run lint -- --write",
-    
     "test": "electron-mocha --renderer -R spec --require @babel/register test/**/*.spec.js",
     "pack": "run-s private:clean private:compile private:build:all",
     "pack:mac": "run-s private:clean private:compile private:build:mac",
