--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/plugin-proposal-decorators": "7.4.4",
     "@babel/preset-env": "7.5.4",
     "@babel/preset-react": "7.0.0",
+    "@storybook/react": "5.1.9",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.6",
     "chai": "4.1.0",
@@ -41,7 +42,7 @@
     "electron": "3.0.0",
     "electron-builder": "20.0.7",
     "electron-devtools-installer": "2.2.4",
-    "electron-mocha": "6.0.1",
+    "electron-mocha": "8.1.0",
     "eslint": "5.1.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-prettier": "3.1.0",
@@ -62,7 +63,7 @@
     "postinstall": "electron-builder install-app-deps",
     "lint": "eslint --no-ignore src *.js",
     "format": "npm run lint -- --write",
-    "test": "electron-mocha --renderer -R spec --require @babel/register test/**/*.spec.js",
+    "test": "electron-mocha --renderer -R spec --require @babel/register src/**/*.spec.js",
     "pack": "run-s private:clean private:compile private:build:all",
     "pack:mac": "run-s private:clean private:compile private:build:mac",
     "pack:win": "run-s private:clean private:compile private:build:win",
