--- a/package.json
+++ b/package.json
@@ -37,17 +37,21 @@
     "@storybook/react": "5.1.9",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.6",
+    "babel-plugin-webpack-alias": "2.1.2",
     "chai": "4.1.0",
     "cross-env": "5.2.0",
     "electron": "3.0.0",
     "electron-builder": "20.0.7",
     "electron-devtools-installer": "2.2.4",
     "electron-mocha": "8.1.0",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.14.0",
     "eslint": "5.1.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-react": "7.1.0",
     "html-webpack-plugin": "3.2.0",
+    "mocha-loader": "2.0.1",
     "node-watch": "0.6.2",
     "npm-run-all": "4.0.1",
     "prettier": "1.18.2",
@@ -63,6 +67,8 @@
     "postinstall": "electron-builder install-app-deps",
     "lint": "eslint --no-ignore src *.js",
     "format": "npm run lint -- --write",
+    "t:test": "mochapack --webpack-config dev/webpack.test.config.js \"src/**/*.spec.js\"",
+    "t:mocha": "mocha  --require @babel/register --file mocha.config.js \"src/**/*.spec.js\"",
     "test": "electron-mocha --renderer -R spec --require @babel/register src/**/*.spec.js",
     "pack": "run-s private:clean private:compile private:build:all",
     "pack:mac": "run-s private:clean private:compile private:build:mac",
