--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-react": "7.1.0",
     "html-webpack-plugin": "3.2.0",
     "mocha-loader": "2.0.1",
+    "mocha-snapshots": "4.2.0",
     "node-watch": "0.6.2",
     "npm-run-all": "4.0.1",
     "prettier": "1.18.2",
@@ -68,7 +69,8 @@
     "lint": "eslint --no-ignore src *.js",
     "format": "npm run lint -- --write",
     "t:test": "mochapack --webpack-config dev/webpack.test.config.js \"src/**/*.spec.js\"",
-    "t:mocha": "mocha  --require @babel/register --file mocha.config.js \"src/**/*.spec.js\"",
+    "t:mocha": "mocha  --require @babel/register --require mocha-snapshots --file mocha.config.js \"src/**/*.spec.js\"",
+    "t:mocha:update": "mocha  --require @babel/register --require mocha-snapshots --update --file mocha.config.js \"src/**/*.spec.js\"",
     "test": "electron-mocha --renderer -R spec --require @babel/register src/**/*.spec.js",
     "pack": "run-s private:clean private:compile private:build:all",
     "pack:mac": "run-s private:clean private:compile private:build:mac",
