--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mocha-snapshots": "4.2.0",
     "node-watch": "0.6.2",
     "npm-run-all": "4.0.1",
+    "nyc": "14.1.1",
     "prettier": "1.18.2",
     "redux-mock-store": "1.2.2",
     "rimraf": "2.5.4",
@@ -64,6 +65,7 @@
     "start": "node ./dev/dev.js",
     "test": "mocha  --require @babel/register --require mocha-snapshots --file mocha.config.js \"src/**/*.spec.js\"",
     "test:update": "mocha  --require @babel/register --require mocha-snapshots --update --file mocha.config.js \"src/**/*.spec.js\"",
+    "coverage": "nyc npm run test",
     "lint": "eslint --no-ignore src *.js",
     "format": "npm run lint -- --write",
     "pack": "run-s private:clean private:compile private:build:all",
