--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "test:update": "mocha  --require @babel/register --require mocha-snapshots --update --file mocha.config.js \"src/**/*.spec.js\"",
     "coverage": "nyc npm run test",
     "lint": "eslint --no-ignore src *.js",
-    "format": "npm run lint -- --write",
+    "format": "npm run lint -- --fix",
     "pack": "run-s private:clean private:compile private:build:all",
     "pack:mac": "run-s private:clean private:compile private:build:mac",
     "pack:win": "run-s private:clean private:compile private:build:win",
