Update Electron / React / Redux
With these updates, there is no longer a problem with application start in Win10 Dark Mode

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.10.0",
-    "react-dom": "^16.10.0",
-    "react-redux": "^7.1.1",
-    "react-router": "^5.1.1",
-    "redux": "^4.0.4",
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
+    "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-localstorage": "^0.4.1",
     "redux-thunk": "^2.2.0"
@@ -32,8 +32,8 @@
     "babel-eslint": "^10.0.3",
     "browser-sync": "^2.26.7",
     "chai": "^4.1.0",
-    "electron": "^6.0.10",
-    "electron-builder": "^21.2.0",
+    "electron": "8.1.1",
+    "electron-builder": "^22.4.1",
     "electron-devtools-installer": "^2.2.4",
     "electron-mocha": "^8.1.2",
     "eslint": "^6.4.0",
