Update all dependencies

--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "repository": "https://github.com/jschr/electron-react-redux-boilerplate",
   "license": "MIT",
   "dependencies": {
-    "@babel/register": "^7.6.2",
-    "connected-react-router": "^6.5.2",
+    "@babel/register": "^7.9.0",
+    "connected-react-router": "^6.8.0",
     "history": "^4.10.1",
     "prop-types": "^15.7.2",
-    "react": "^16.10.0",
+    "react": "^16.13.1",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
@@ -24,28 +24,28 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-decorators": "^7.6.0",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.3",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "babel-eslint": "^10.1.0",
     "browser-sync": "^2.26.7",
     "chai": "^4.1.0",
-    "electron": "8.1.1",
+    "electron": "^8.2.2",
     "electron-builder": "^22.4.1",
-    "electron-devtools-installer": "^2.2.4",
-    "electron-mocha": "^8.1.2",
-    "eslint": "^6.4.0",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-react": "^7.14.3",
+    "electron-devtools-installer": "^3.0.0",
+    "electron-mocha": "^8.2.1",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-react": "^7.19.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-inject-string": "^1.1.2",
     "gulp-sourcemaps": "^2.6.5",
-    "prettier": "^1.18.2",
-    "redux-mock-store": "^1.2.2",
-    "rimraf": "^3.0.0"
+    "prettier": "^2.0.4",
+    "redux-mock-store": "^1.5.4",
+    "rimraf": "^3.0.2"
   },
   "scripts": {
     "postinstall": "electron-builder install-app-deps",
